@@ -1,15 +1,18 @@
 package com.feed_grabber.core.user;
 
+import com.feed_grabber.core.auth.AuthService;
 import com.feed_grabber.core.auth.dto.UserRegisterDTO;
 import com.feed_grabber.core.auth.dto.UserRegisterInvitationDTO;
 import com.feed_grabber.core.auth.exceptions.InsertionException;
 import com.feed_grabber.core.auth.exceptions.UserAlreadyExistsException;
 import com.feed_grabber.core.company.Company;
 import com.feed_grabber.core.company.CompanyRepository;
+import com.feed_grabber.core.company.exceptions.CompanyAlreadyExistsException;
+import com.feed_grabber.core.company.exceptions.WrongCompanyNameException;
 import com.feed_grabber.core.invitation.InvitationRepository;
 import com.feed_grabber.core.invitation.exceptions.InvitationNotFoundException;
-import com.feed_grabber.core.questionnaire.QuestionnaireMapper;
-import com.feed_grabber.core.questionnaire.dto.QuestionnaireDto;
+import com.feed_grabber.core.registration.TokenType;
+import com.feed_grabber.core.registration.VerificationTokenService;
 import com.feed_grabber.core.role.Role;
 import com.feed_grabber.core.role.RoleRepository;
 import com.feed_grabber.core.role.SystemRole;
@@ -17,16 +20,16 @@ import com.feed_grabber.core.user.dto.UserCreateDto;
 import com.feed_grabber.core.user.dto.UserDetailsResponseDTO;
 import com.feed_grabber.core.user.dto.UserDto;
 import com.feed_grabber.core.user.dto.UserShortDto;
+import com.feed_grabber.core.user.exceptions.UserNotFoundException;
 import com.feed_grabber.core.user.model.User;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -39,30 +42,47 @@ public class UserService implements UserDetailsService {
     private final CompanyRepository companyRepository;
     private final InvitationRepository invitationRepository;
     private final PasswordEncoder passwordEncoder;
-
+    private final VerificationTokenService verificationTokenService;
 
     public UserService(UserRepository userRepository,
                        RoleRepository roleRepository,
                        CompanyRepository companyRepository,
                        InvitationRepository invitationRepository,
-                       PasswordEncoder passwordEncoder) {
+                       PasswordEncoder passwordEncoder,
+                       VerificationTokenService verificationTokenService) {
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
         this.companyRepository = companyRepository;
         this.invitationRepository = invitationRepository;
         this.passwordEncoder = passwordEncoder;
+        this.verificationTokenService = verificationTokenService;
     }
 
     @Transactional
-    public void createDefault(UserRegisterDTO userRegisterDTO) {
+    public UUID createDefault(UserRegisterDTO userRegisterDTO) throws WrongCompanyNameException {
 
-        if (userRepository.findByUsername(userRegisterDTO.getUsername()).isPresent()
-                || userRepository.findByEmail(userRegisterDTO.getEmail()).isPresent()) {
-            throw new UserAlreadyExistsException();
+//        if (userRepository.findByUsername(userRegisterDTO.getUsername()).isPresent()
+//                || userRepository.findByEmail(userRegisterDTO.getEmail()).isPresent()) {
+//            throw new UserAlreadyExistsException();
+//        }
+
+        if (companyRepository.existsByName(userRegisterDTO.getCompanyName())) {
+            throw new CompanyAlreadyExistsException();
+        }
+        if (userRegisterDTO.getCompanyName().length() > 63) {
+            throw new WrongCompanyNameException("Too long company name(more than 63)");
+        }
+        if (!userRegisterDTO.getCompanyName()
+                .matches("([a-zA-Z0-9])([ ]?[a-zA-Z0-9])*([a-zA-Z0-9])")) {
+            throw new WrongCompanyNameException("Company name should not start/end with space," +
+                    " have more than one space in sequence. Company name should contain latin letters and numbers ");
         }
 
         var company = companyRepository.save(
-                Company.builder().name(userRegisterDTO.getCompanyName()).build());
+                Company.builder()
+                        .name(userRegisterDTO.getCompanyName())
+                        .subdomainName(userRegisterDTO.getCompanyName().replaceAll("([ ])", "-"))
+                        .build());
 
         var roles = roleRepository.saveAll(
                 List.of(Role
@@ -92,7 +112,7 @@ public class UserService implements UserDetailsService {
             throw new InsertionException(roles.toString());
         }
 
-        userRepository.save(User.builder()
+        var user = userRepository.save(User.builder()
                 .email(userRegisterDTO.getEmail())
                 .username(userRegisterDTO.getUsername())
                 .password(userRegisterDTO.getPassword())
@@ -100,9 +120,11 @@ public class UserService implements UserDetailsService {
                 .company(company)
                 .build()
         );
+        verificationTokenService.generateVerificationToken(user, TokenType.REGISTER);
+        return company.getId();
     }
 
-    public void createInCompany(UserRegisterInvitationDTO registerDto) throws InvitationNotFoundException {
+    public UUID createInCompany(UserRegisterInvitationDTO registerDto) throws InvitationNotFoundException {
 
         var invitation = invitationRepository.findById(registerDto.getInvitationId())
                 .orElseThrow(InvitationNotFoundException::new);
@@ -118,7 +140,7 @@ public class UserService implements UserDetailsService {
         var role = roleRepository.findByCompanyIdAndSystemRole(company.getId(), SystemRole.employee)
                 .orElseThrow();
 
-        userRepository.save(User.builder()
+        var user = userRepository.save(User.builder()
                 .email(registerDto.getEmail())
                 .username(registerDto.getUsername())
                 .password(registerDto.getPassword())
@@ -126,6 +148,8 @@ public class UserService implements UserDetailsService {
                 .company(company)
                 .build()
         );
+        verificationTokenService.generateVerificationToken(user, TokenType.REGISTER);
+        return invitation.getCompany().getId();
     }
 
     public Optional<UUID> createUser(UserCreateDto userDto) {
@@ -184,15 +208,31 @@ public class UserService implements UserDetailsService {
     }
 
     @Override
-    public org.springframework.security.core.userdetails.User loadUserByUsername(String username) throws UsernameNotFoundException {
+    public org.springframework.security.core.userdetails.User loadUserByUsername(String usernameAndCompanyId) throws UsernameNotFoundException {
+        var username = this.extractUserName(usernameAndCompanyId);
+        var companyId = this.extractCompanyId(usernameAndCompanyId);
         return userRepository
-                .findByUsername(username)
+                .findByUsernameAndCompanyId(username, companyId)
                 .map(u -> new org.springframework.security.core.userdetails.User(u.getUsername()
                         , u.getPassword()
-                        , Collections.emptyList()))
+                        , List.of(new SimpleGrantedAuthority(u.getRole().getName()))))
                 .orElseThrow(() -> new UsernameNotFoundException(username));
     }
 
+    private String extractUserName(String usernameAndCompanyId) {
+        var index = this.getDividerIndex(usernameAndCompanyId);
+        return usernameAndCompanyId.substring(0, index);
+    }
+
+    private UUID extractCompanyId(String usernameAndCompanyId) {
+        var startIndex = this.getDividerIndex(usernameAndCompanyId) + 1;
+        var companyId = usernameAndCompanyId.substring(startIndex, usernameAndCompanyId.length());
+        return UUID.fromString(companyId);
+    }
+
+    private int getDividerIndex(String usernameAndCompanyId) {
+        return usernameAndCompanyId.indexOf(AuthService.LOGIN_DIVIDER);
+    }
 
     public List<UserShortDto> getAllByCompanyId(UUID companyId) {
         return userRepository.findAllByCompanyId(companyId)
@@ -212,5 +252,10 @@ public class UserService implements UserDetailsService {
         return userRepository.countAllByCompanyId(companyId);
     }
 
-
+    public UserShortDto getUserShortByEmailAndCompany(String email, UUID companyId) throws UserNotFoundException {
+        return UserMapper.MAPPER.shortFromUser(
+                userRepository
+                        .findByCompanyIdAndEmail(companyId, email)
+                        .orElseThrow(UserNotFoundException::new));
+    }
 }
